--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron_react",
+  "name": "planning-afpa-amiens",
   "description": "...",
   "author": {
     "name": "kb",
@@ -33,6 +33,10 @@
     "react-dom": "^18.2.0",
     "vite": "^4.3.2",
     "vite-plugin-electron": "^0.11.2",
-    "vite-plugin-electron-renderer": "^0.14.1"
+    "vite-plugin-electron-renderer": "^0.14.1",
+    "exceljs": "^4.3.0",
+    "moment": "^2.29.4",
+    "@reduxjs/toolkit": "^1.9.3",
+    "react-redux": "^8.0.5"
   }
 }
