--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "electron-updater": "^5.3.0"
+    "electron-updater": "^5.3.0",
+    "exceljs": "^4.3.0",
+    "moment": "^2.29.4"
+
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -34,8 +37,6 @@
     "vite": "^4.3.2",
     "vite-plugin-electron": "^0.11.2",
     "vite-plugin-electron-renderer": "^0.14.1",
-    "exceljs": "^4.3.0",
-    "moment": "^2.29.4",
     "@reduxjs/toolkit": "^1.9.3",
     "react-redux": "^8.0.5"
   }
