--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "email": "kill@bill.com"
   },
   "private": true,
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "dist-electron/main/index.js",
   "scripts": {
     "dev": "vite",
@@ -21,6 +21,7 @@
     "moment": "^2.29.4"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
@@ -33,10 +34,9 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "vite": "^4.3.2",
     "vite-plugin-electron": "^0.11.2",
-    "vite-plugin-electron-renderer": "^0.14.1",
-    "@reduxjs/toolkit": "^1.9.3",
-    "react-redux": "^8.0.5"
+    "vite-plugin-electron-renderer": "^0.14.1"
   }
 }
