--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dayjs": "^1.11.9",
     "electron-updater": "^5.3.0",
     "exceljs": "^4.3.0",
     "moment": "^2.29.4"
