--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "planning-afpa-amiens",
+  "name": "planning",
   "description": "...",
   "author": {
     "name": "kb",
     "email": "kill@bill.com"
   },
   "private": true,
-  "version": "1.0.12",
+  "version": "1.0.27",
   "main": "dist-electron/main/index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "deploy": "electron-builder",
+    "deploy": "electron-builder -wl",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -27,7 +27,7 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
     "electron": "^24.1.3",
-    "electron-builder": "^23.6.0",
+    "electron-builder": "^24.6.4",
     "esbuild": "^0.17.18",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
