--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dayjs": "^1.11.9",
     "electron-updater": "^5.3.0",
     "exceljs": "^4.3.0",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.9.3",
