--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "email": "kill@bill.com"
   },
   "private": true,
-  "version": "1.0.28",
+  "version": "1.0.29",
   "main": "dist-electron/main/index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "deploy": "electron-builder -wl",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "electron-builder install-app-deps",
+		"edbuild": "electron-builder --mac --windows --linux",
+		"edrelease": "electron-builder --mac --windows --linux --publish always"
+	
   },
   "dependencies": {
     "dayjs": "^1.11.9",
