--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -36,9 +36,9 @@
     "deleteAppDataOnUninstall": false
   },
   "publish": {
-    "provider": "generic",
+    "provider": "github",
     "channel": "latest",
-    "url": "https://github.com/electron-vite/electron-vite-react/releases/download/v0.9.9/"
+    // "url": "https://github.com/electron-vite/electron-vite-react/releases/download/v0.9.9/"
   },
   // "directories": {
   //   "buildResources": "resources",
