--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -2,16 +2,14 @@
  * @see https://www.electron.build/configuration/configuration
  */
 {
-  "appId": "YourAppID",
+  "appId": "Planning",
   "asar": true,
   "directories": {
-    // "buildResources": "resources",
     "output": "release"
   },
   "files": [
     "dist-electron",
     "dist"
-    // "resources/**/*"
   ],
   "win": {
     "icon": "./ressources/icons/icon.png",
@@ -38,12 +36,6 @@
   "publish": {
     "provider": "github",
     "channel": "latest",
-    // "url": "https://github.com/electron-vite/electron-vite-react/releases/download/v0.9.9/"
-  },
-  // "directories": {
-  //   "buildResources": "resources",
-  //   "output": "release"
-  // },
-  // "files": ["resources/**/*"]
+  }
         
 }
